--- a/index.html
+++ b/index.html
@@ -1,12 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Portfolio</title>
-  </head>
-  <body>
-    <h3> Hana Louiza Moussaoui Portfolio</h3>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hana's Portfolio</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <script src="script.js"></script>
+  <header id="home">
+    <h1 id="typing"></h1>
+    <p> Computer Science Student • Artist • Small Business Owner </p>
+    <div class="scroll-arrow" onclick="scrollToSection('#about')"></div>
+  </header>
+  
+
+  <section id="about">
+    <h2>About Me</h2>
+    <p>I'm Hana Louiza Moussaoui, a driven and creative 3rd-year computer science student. I'm passionate about both technology and design. I'm always eager to tackle challenges and work with others who have as much energy and passion as I do.</p>
+    <div class="container">
+      <div class="list">
+        <h3>Interests</h3>
+        <ul>
+          <li> 🕹️ Game Development </li>
+          <li> 🎨 Painting </li>
+          <li> 📖 Reading </li>
+          <li> 🏃Running </li>
+        </ul>
+    
+      </div>
+      <div class="list">
+        <h3>Experience</h3>
+        <ul>
+          <li>Intern at Primaco (2025)</li>
+          <li> CUSEC Promotions Coordinator </li>
+          <li> JACHacks Promotions Manager </li>
+          <li> Mikuna Small Business Founder </li>
+        </ul>
+      </div>
+  
+  </div>
+  </section>
+  
+
+  <section id="projects">
+    <h2>Projects</h2>
+    <div id="projects-list-1">
+      <div class="project-card">
+        <div class="project-gif">
+          <a href="https://github.com/HanaLouizaMoussaoui/TheLeapinKitchen" target="_blank" class="view-link">View on GitHub</a>
+          <img src="./leapinFrogGIF.gif" alt="Frog Waiter Game" />
+        </div>
+        <h3>The Leapin' Kitchen 🐸</h3>
+        <p>The Leapin' Kitchen is a time-management game where you play as a little frog waiter tasked with serving tables in a busy restaurant. Each level has a money goal you must reach before time runs out.</p>
+        <div class="tags">
+          <p class="javascript"> JavaScript </p>
+          <p class="matterjs"> Matter.js </p>
+        </div>
+      </div>
+      <div class="project-card">
+        <div class="project-gif">
+          <a href="https://github.com/HanaLouizaMoussaoui/MOOd" target="_blank" class="view-link">View on GitHub</a>
+          <img src="./moodGIF.gif" alt="Pet Adoption Game" />
+        </div>
+        <h3>MOOd 🐄</h3>
+        <p>MOOd is a kotlin application with the cutest little cow friend that lets you input your daily mood, give you AI-powered suggestions to support you, and manage a simple user account. </p>
+        <div class="tags">
+          <p class="kotlin"> Kotlin </p>
+          <p class="jetpack"> Jetpack Compose </p>
+        </div>
+      </div>
+      <div class="project-card">
+        <div class="project-gif">
+          <a href="https://github.com/HanaLouizaMoussaoui/PortPanda" target="_blank" class="view-link">View on GitHub</a>
+          <img src="./portPandaGIF.gif" alt="Port Panda UI" />
+        </div>
+        <h3>PortPanda 🐼</h3>
+        <p>PortPanda is a simple port scanner with a web interface. It allows the user to scan a range of ports and learn valuable information on the results..</p>
+        <div class="tags">
+          <p class="python"> Python </p>
+          <p class="javascript"> JavaScript </p>
+          <p class="html"> HTML </p>
+        </div>
+        <div class="tags">
+          <p class="css"> CSS </p>
+          <p class="flask"> Flask </p>
+        </div>
+      </div>
+      <button onclick="goToList2()"> ► </button>
+    </div>
+    <div id="projects-list-2" style="display: none;">
+      <button onclick="goToList1()"> ◄ </button>
+      <div class="project-card">
+        <div class="project-gif">
+          <a href="https://github.com/HanaLouizaMoussaoui/PetAdoptionCenter" target="_blank" class="view-link">View on GitHub</a>
+          <img src="./petAdoptionGIF.gif" alt="Pet Adoption Game" />
+        </div>
+        <h3>Pet Adoption Center 🏩</h3>
+        <p>This simple WPF app allows the user to browse through adorable pets and adopt their future best friend. Featuring hand-drawn designs! </p>
+        <div class="tags">
+          <p class="csharp"> C# </p>
+          <p class="wpf"> WPF </p>
+        </div>
+      </div>
+      <div class="project-card" style="display:flex; justify-content: center; align-items: center;">
+        <p style="font-size: 18px;"> And much more to come! </p>
+      </div>
+    </div>
+    
+  </section>
+
+  <section id="contact">
+    <h2>Contact Me</h2>
+    <form>
+      <a href="https://github.com/HanaLouizaMoussaoui" target="_blank">
+        <img src="https://img.icons8.com/?size=100&id=62856&format=png&color=FFFFFF" alt="GitHub" width="50" height="50">
+      </a>
+      <a href="https://www.linkedin.com/in/hanalouizamoussaoui/" target="_blank">
+        <img src="https://img.icons8.com/m_rounded/512/FFFFFF/linkedin.png" alt="GitHub" width="50" height="50">
+      </a>
+    </form>
+  </section>
+  
+  
+  <footer>
+    <p>© 2024 Hana Louiza Moussaoui</p>
+  </footer>
+
+</body>
 </html>
